# ToDo-MiniApp

./: README.md  docker-compose.yml
client/: Dockerfile
server/: .env_example  Dockerfile  main.py  pyproject.toml
server/app/routers/: __init__.py  root.py  user.py  webhook.py
server/bot/database/: engine.py  models.py
server/bot/database/queries/: __init__.py  banner.py  debt.py  event.py  event_confirm.py  queries.py  role.py  user.py
server/bot/filters/: chat_types.py  isAdmin.py  isBaned.py  isUser.py  permission_filter.py
server/bot/handlers/: __init__.py  admin.py  debt.py  event_confirm.py  event_confirm_menu.py  events_menu.py  group.py  guest.py  guest_confirm.py  handlers.py  users_list.py
server/bot/keyboards/: inline.py  reply.py
server/bot/middlewares/: guest_limiter.py  throttling.py
server/bot/misc/: bot_commands.py
server/bot/utils/: events_system.py  paginator.py  sheets_sync.py
server/database/: engine.py  models.py
server/database/queries/: task.py  user.py
